Property in costructor function

--- a/object.html
+++ b/object.html
@@ -9,11 +9,21 @@
     <script>
 
         function Person() {
-
+            this.firstName = ""
+            this.lastName = ""
         }
 
         const shaufi = new Person()
+        shaufi.firstName = "Shaufi"
+        shaufi.lastName = "Imanulhaq"
+
         const budi = new Person()
+        budi.firstName = "Budi"
+        budi.lastName = "Nugraha"
+
+
+        console.log(shaufi)
+        console.log(budi)
 
     </script>
 
