Parameter in costructor function

--- a/object.html
+++ b/object.html
@@ -8,22 +8,18 @@
 
     <script>
 
-        function Person() {
-            this.firstName = ""
-            this.lastName = ""
+        function Person(firstName, lastName) {
+            this.firstName = firstName
+            this.lastName = lastName
             this.sayHello = function (name) {
-                console.info(`Hello ${name}, My name is ${this.firstName} `)
+                console.info(`Hello ${name}, my name is ${this.firstName} `)
             }
         }
 
-        const shaufi = new Person()
-        shaufi.firstName = "Shaufi"
-        shaufi.lastName = "Imanulhaq"
+        const shaufi = new Person("Shaufi", "Imanulhaq")
         shaufi.sayHello("Joko")
 
-        const budi = new Person()
-        budi.firstName = "Budi"
-        budi.lastName = "Nugraha"
+        const budi = new Person("Budi", "Nugraha")
         budi.sayHello("Joko")
 
         console.log(shaufi)
