add update all file for final

--- a/class-private-field.html
+++ b/class-private-field.html
@@ -8,18 +8,18 @@
     <script>
 
         class Counter {
-            #couter = 0
+            #counter = 0
 
             increment() {
-                this.#couter++
+                this.#counter++
             }
             
             decrement() {
-                this.#couter--
+                this.#counter--
             }
 
             get() {
-                return this.#couter
+                return this.#counter
             }
         }
 
