--- a/error-handling.html
+++ b/error-handling.html
@@ -26,16 +26,16 @@
             console.info(MathUtil.sum())
             console.info("Shaufi")
         } catch(error) {
-            console.info(`Terjadi error : ${error.message} `)
+            console.info(`an error occurred: ${error.message} `)
         } finally {
-            console.info("Program selesai")
+            console.info("Program is complete")
         }
 
         console.info("Imanulhaq")
 
         class Counter {
 
-            #counter = 0
+            #counter = 1
 
             next() {
                 try{
