--- a/iterable-iterator.html
+++ b/iterable-iterator.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Iterator</title>
+    <title>Iterable dan Iterator</title>
 </head>
 <body>
     <script>
