--- a/static-method.html
+++ b/static-method.html
@@ -18,6 +18,9 @@
             }
         }
 
+        // const result = new MathUtil()
+        // console.info(result.sum(1, 1, 1, 1, 1))
+
         const result = MathUtil.sum(1, 1, 1, 1, 1)
         console.info(result)
 
